k8s/base/networking/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: merge-build-repeat
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: frontend
  ports:
    - name: http
      port: 8080
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: application
  namespace: merge-build-repeat
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: application
  ports:
    - name: http
      port: 8080
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: application-database
  namespace: merge-build-repeat
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: application-database
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: chat
  namespace: merge-build-repeat
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: chat
  ports:
    - name: http
      port: 8080
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: chat-database
  namespace: merge-build-repeat
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: chat-database
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: genai
  namespace: merge-build-repeat
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: genai
  ports:
    - name: http
      port: 8080
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: game-engine
  namespace: merge-build-repeat
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: game-engine
  ports:
    - name: http
      port: 8080
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: merge-build-repeat
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: prometheus
  ports:
    - name: http
      port: 9090
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: app-db-exporter
  namespace: merge-build-repeat
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: app-db-exporter
  ports:
    - name: metrics
      port: 9187
      targetPort: metrics
---
apiVersion: v1
kind: Service
metadata:
  name: chat-db-exporter
  namespace: merge-build-repeat
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: chat-db-exporter
  ports:
    - name: metrics
      port: 9187
      targetPort: metrics
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: merge-build-repeat
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: grafana
  ports:
    - name: http
      port: 3000
      targetPort: http
